# sunray-core

./: .gitignore  AGENTS.md  ALFRED_MIGRATIONSPLAN.md  Analyse.md  Analyse_NEU_1.md  BUG.md  BUG_REPORT.md  BUILD_NOTES.md  CLAUDE.md  CLAUDE_SYSTEM.md  CMakeLists.txt  FUTURE_FEATURES.md  HARDWARE_MAP.md  IMPROVEMENT_BACKLOG.md  IST_SOLL_ANALYSE.md  Implementierung-Winkel.md  Mobile-App.md  NewStart.md  PLAN_MOWING_ARCHITECTURE.md  PRIORITY_MATRIX.md  PROJECT_MAP.md  PROJECT_OVERVIEW.md  README.md  SAFETY_MAP.md  SOLL_IST.md  STRIPING-WINKEL-ANALYSE.md  SYSTEM_OVERVIEW.md  TASK.md  TASKS.md  TODO.md  TODO_ALT.md  VERHALTENSKONZEPT.md  WORKING_RULES.md  a.out  config.example.json  config_examples.txt  main.cpp  mapping-TXT.md  sunray-map (1).txt  test_fallback.sh  (+4 more)
.claude/: settings.json  settings.local.json
.claude-prompts/: architect-future.md  bug-hunting.md  firmware-safety.md  ha-integration.md  hardware-mapper.md  mqtt-protocol.md  repo-scanner.md  rtk-integration.md  safety-auditor.md  verifier.md
.github/workflows/: mobile-app-v2-pr-check.yml  mobile-app-v2-release.yml
.memory/: MEMORY.md  architecture-decisions.md  cost-optimization.md  decisions.md  discovery-summary.md  hardware-pinout.md  known-issues.md  module_index.md  mqtt-topics.md  rtk-context.md  runtime-knowledge.md  safety-findings.md  session-notes.md
.memory/modules/: config.md  gps_driver.md  hardware_interface.md  i2c.md  mqtt_client.md  navigation.md  op_statemachine.md  port_expander.md  robot.md  serial.md  serial_robot_driver.md  simulation_driver.md  websocket_server.md  webui.md
ALTE_DATEIEN/: CLAUDE.md  CLAUDE_SYSTEM.md  PHASE3_TECHNICAL_DESIGN.md  RELEASE_CONFIGURATION.md  STATUS.md  SUNRAY_CORE_VS_NAVIMOW_VS_LUBA.md
ALTE_DATEIEN/OLD_DOCS/: ANALYSIS_REPORT.md  ARCHITECTURE.md  BUG_REPORT.md  cassandra_mission_service_analysis.md
ALTE_DATEIEN/webui-vue-reference/: ARCHIVE_NOTICE.md  vite.config.ts
OLD_DOCS/: STATUS.md
alfred/firmware/: platformio.ini  rm18.ino
build_gcc/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile
build_gcc/core/: Makefile
build_gcc/hal/: Makefile
build_gcc/platform/: Makefile
build_gcc/tests/: CTestTestfile.cmake  Makefile  sunray_tests-b12d07c_include.cmake
core/: ButtonActions.cpp  ButtonActions.h  BuzzerSequencer.cpp  BuzzerSequencer.h  CMakeLists.txt  Config.cpp  Config.h  EventMessages.cpp  EventMessages.h  Logger.h  MqttClient.cpp  MqttClient.h  Robot.cpp  Robot.h  RobotConstants.h  Schedule.cpp  Schedule.h  WebSocketServer.cpp  WebSocketServer.h
core/control/: DifferentialDriveController.cpp  DifferentialDriveController.h  OpenLoopDriveController.cpp  OpenLoopDriveController.h  PidController.cpp  PidController.h
core/navigation/: Costmap.cpp  Costmap.h  GridMap.cpp  GridMap.h  LineTracker.cpp  LineTracker.h  Map.cpp  Map.h  MissionCompiler.cpp  MissionCompiler.h  MowRoutePlanner.cpp  MowRoutePlanner.h  PathPlanner.cpp  PathPlanner.h  Planner.cpp  Planner.h  PlannerContext.h  Route.h  RouteValidator.cpp  RouteValidator.h  RuntimeState.cpp  RuntimeState.h  StateEstimator.cpp  StateEstimator.h  StripingAlgorithm.cpp  StripingAlgorithm.h  TransitionRouter.cpp  TransitionRouter.h  WaypointExecutor.cpp  WaypointExecutor.h  ZonePlanner.cpp  ZonePlanner.h
core/op/: ChargeOp.cpp  DockOp.cpp  ErrorOp.cpp  EscapeReverseOp.cpp  GpsWaitFixOp.cpp  IdleOp.cpp  ManualDriveOp.cpp  MowOp.cpp  NavToStartOp.cpp  Op.cpp  Op.h  UndockOp.cpp  WaitRainOp.cpp
core/storage/: EventRecord.h  EventRecorder.cpp  EventRecorder.h  HistoryDatabase.cpp  HistoryDatabase.h  SessionRecord.h
docs/: ALFRED_FLASHING.md  ALFRED_HARDWARE_ACCEPTANCE.md  ALFRED_PI_SWITCHOVER_GUIDE.md  ALFRED_PRODUCTION_SWITCHOVER.md  ALFRED_STM32_REFACTOR_PLAN.md  ALFRED_TEST_RUN_GUIDE.md  ARCHITECTURE.md  FLUTTER_APP_IMPLEMENTATION_PLAN.md  HISTORY_STATS_ARCHITECTURE.md  MOBILE_APP_FIELD_TEST_CHECKLIST.md  MQTT.md  NAVIGATION_UPGRADE.md  OP_STATE_MACHINE.md  PID_CONTROLLER_PLAN.md  ROBOT_BUTTON_BUZZER_ERROR.md  ROBOT_RUN_BASELINE.md  SOFTWARE_RELEASE_GATE.md  SVELTE_WEBUI_CONCEPT.md  TELEMETRY_CONTRACT.md  USER_EXPERIENCE_IMPROVEMENTS.md  WEBUI_ARCHITECTURE.md  WEBUI_TASK.md  missions_concept.html  mowing-product-replan.md  swd-pi.ocd
hal/: CMakeLists.txt  HardwareInterface.h
hal/GpsDriver/: CMakeLists.txt  GpsDriver.h  UbloxGpsDriver.cpp  UbloxGpsDriver.h
hal/Imu/: CMakeLists.txt  Mpu6050Driver.cpp  Mpu6050Driver.h
hal/SerialRobotDriver/: CMakeLists.txt  SerialRobotDriver.cpp  SerialRobotDriver.h
hal/SimulationDriver/: CMakeLists.txt  SimulationDriver.cpp  SimulationDriver.h
mobile-app/: README.md  pubspec.yaml
mobile-app-v2/: README.md  pubspec.yaml
mobile-app-v2/lib/: main.dart
mobile-app-v2/test/: map_editor_controller_test.dart  widget_test.dart
mobile-app/android/: key.properties.example
mobile-app/lib/: main.dart
mobile-app/test/: map_editor_controller_test.dart  mission_repository_test.dart
mobile-app/web/: index.html  manifest.json
mockups/: mobile-app-v2-preview.html
platform/: CMakeLists.txt  I2C.cpp  I2C.h  I2cMux.cpp  I2cMux.h  PortExpander.cpp  PortExpander.h  Serial.cpp  Serial.h
scripts/: check_alfred_hw.sh  check_deploy_state.sh  check_rm18_uart.sh  flash_alfred.sh  flash_uploaded_stm.sh  install_sunray.sh  ota_update.sh  stress_rm18_uart.sh  sunray.avahi.service.xml  workflow.md
tests/: CMakeLists.txt  test_boustrophedon.cpp  test_config.cpp  test_gps_driver.cpp  test_history_database.cpp  test_i2c.cpp  test_mqtt_client.cpp  test_navigation.cpp  test_op_machine.cpp  test_port_expander.cpp  test_robot.cpp  test_serial.cpp  test_serial_driver.cpp  test_simulation_driver.cpp  test_websocket_server.cpp
tools/: ex2_buzzer_probe.cpp  ex3_led_probe.cpp  ex_led_buzzer_test.cpp  hw_test.cpp  led_imu_test.cpp  pca9555_probe.cpp  rm18_serial_probe.cpp  route_visualizer.cpp
webui/: README.md  package-lock.json  package.json  vite.config.ts
webui-svelte/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
webui-svelte/src/: App.svelte  app.css
webui/src/: App.vue
(+184 files in other folders)
